2016-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]]): Add several new date(time) formats
	of the 14OCT2016 variety, with and without hours/minutes

	* tests/allFormats.R: Add new tests as well

2016-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* R/anytime.R: Added extra comment to help page

	* tests/gh_issue_12.R: Small test for #12

2016-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (ptToDouble): Do not access tm_isdst on Windows for
	dates earlier than the epoch (bug report #12)

2016-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (install): Added

2016-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (testFormat): Added (non-exported) helper function
	to test one format on one input (and timezone)
	(ptToDouble): Factored function now called from two places

2016-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

	* inst/NEWS.Rd: Ditto

2016-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* DESCRIPTION (Imports): Relax min. version costraint on Rcpp

	* NAMESPACE: Make getFormats() and addFormat() public

	* src/anytime.cpp: Added documentation for new functions getFormats()
	and addFormats()
	* man/getFormats.Rd: Ditto

	* man/anytime-package.Rd: Mention getFormats() and addFormats()

	* inst/NEWS.Rd: Added

	* tests/validate.R: Loosen test removing stopifnot

	* R/anytime.R (anydate): Call as.POSIXlt() before calling as.Date()
	to ensure all sub-components of the tm structure are set (GH #4)
	* tests/gh_issue_5.R: test case

2016-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled to (interim) version 0.0.1.1

	* DESCRIPTION (Title, Description): Edited to mention anydate()

	* src/anytime.cpp: Refactored so that formats are now simple
	string kept in vector (from which locales are built in the ctor of